--- a/index.html
+++ b/index.html
@@ -1,1 +1,27 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>My Webpage</title>
 
+    <!-- CSS file -->
+    <link rel="stylesheet" href="styles.css" />
+</head>
+
+<body>
+    <header>
+        <h1>Welcome!</h1>
+    </header>
+
+    <main>
+        <section>
+            <p>This is a basic HTML structure example.</p>
+        </section>
+    </main>
+
+    <footer>
+        <small>© 2025 My Website</small>
+    </footer>
+</body>
+</html>
