Update title and add image to index.html

--- a/index.html
+++ b/index.html
@@ -3,25 +3,11 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>My Webpage</title>
-
-    <!-- CSS file -->
-    <link rel="stylesheet" href="styles.css" />
+    <title>Image Example</title>
 </head>
 
 <body>
-    <header>
-        <h1>Welcome!</h1>
-    </header>
-
-    <main>
-        <section>
-            <p>This is a basic HTML structure example.</p>
-        </section>
-    </main>
-
-    <footer>
-        <small>© 2025 My Website</small>
-    </footer>
+    <h1>My Image</h1>
+    <img src="images/myphoto.png" alt="Me posing" width="300" />
 </body>
 </html>
