--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 
 <body>
     <h1>My Image</h1>
-    <img src="images/myphoto.png" alt="Me posing" width="300" />
+    <img src="images/channels4_profile.jpg" alt="Me posing" width="300" />
 </body>
 </html>
