--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-    <h1>My Image</h1>
+    <h1>Gioi Thieu</h1>
     <img src="images/channels4_profile.jpg" alt="Me posing" width="300" />
 </body>
 </html>
