--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
 </head>
 
 <body>
-    <h1>Gioi Thieu</h1>
+    <h1 style="color: Blue; text-align: center;"> Gioi Thieu </h1>
     <img src="images/channels4_profile.jpg" alt="Me posing" width="300" />
+    Nickname:
+    Hobby:
+    My advantage:
+    Dream:
 </body>
 </html>
