--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
 <body>
     <h1 style="color: Blue; text-align: center;"> Gioi Thieu </h1>
     <img src="images/channels4_profile.jpg" alt="Me posing" width="300" />
-    <h2 style="color: red; text-align: center;"> Nickname: </h2>
+    <h2 style="color: red;"> Nickname: </h2>
     Turtle AW
-    <h2 style="color: red; text-align: center;"> Hobby: </h2>
+    <h2 style="color: red; ;"> Hobby: </h2>
     Reading, preaching, and aw.
-    <h2 style="color: red; text-align: center;"> My advantages: </h2>
+    <h2 style="color: red; "> My advantages: </h2>
      Faith, Strong analytical mindset, Deep thinking
-    <h2 style="color: red; text-align: center;"> Dream: </h2>
+    <h2 style="color: red; "> Dream: </h2>
      have the ultimate answer for the meaning of life which so called heaven, having no doubts
 </body>
 </html>
