Modify table layout and image positioning
Updated table structure and image alignment.

--- a/index.html
+++ b/index.html
@@ -9,9 +9,11 @@
 <body>
     <h1 style="color: Blue; text-align: center;"> Gioi Thieu </h1>
     <table>
-         <tr>
+         <tr> 
+             <td width="30%" style="text-align: center, vertical-align: top;">
+                <img src="images/channels4_profile.jpg" alt="Me posing" width="300" />
+             </td>
               <td>
-                  <img src="images/channels4_profile.jpg" alt="Me posing" width="300" />
               </td>
               <td>
                 <h2 style="color: red;"> Nickname: </h2>
