--- a/index.html
+++ b/index.html
@@ -17,11 +17,17 @@
                 <h2 style="color: red;"> Nickname: </h2>
                 Turtle AW
                 <h2 style="color: red; ;"> Hobby: </h2>
-                Reading, preaching, and aw.
+                - Reading, preaching, and aw.<br>
+                - Wander around to see and perceive human nature. <br>
+                - Cloth the naked, help the poor, and foreost lead them to the lord.<br>
+                - Loving and sharing to the public<br>
                 <h2 style="color: red; "> My advantages: </h2>
-                Faith, Strong analytical mindset, Deep thinking
+                - Faith, Strong analytical mindset, Deep thinking.<br>
+                - Compassion, naivity, the truth.<br>
                 <h2 style="color: red; "> Dream: </h2>
-                 have the ultimate answer for the meaning of life which so called heaven, having no doubts
+                 - have the ultimate answer for the meaning of life which so called heaven, having no doubts.<br>
+                 - Obeying the lor for good.<br>
+                 - Having children with a faithful wife.<br>
               </td>
          </tr>
     </table>
