--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
             <h2>My Advantages:</h2>
             <ul>
                 <li>Faith, Strong analytical mindset, Deep thinking.</li>
-                <li>Compassion, naivety, the truth.</li>
+                <li>Compassion, repentance, the truth.</li>
             </ul>
 
             <h2>Dream:</h2>
