--- a/index.html
+++ b/index.html
@@ -101,7 +101,8 @@
                 <li>Obey the Lord for good.</li>
                 <li>Have children with a faithful wife.</li>
             </ul>
-            <a href="https://www.youtube.com/watch?v=VZJTLd6XByQ&pp=ygUPa2p2IGF1ZGlvIGJpYmxl2AaLRA%3D%3D" target="_blank" >Best Book EVER</a>
+            <a href="https://www.youtube.com/watch?v=VZJTLd6XByQ&pp=ygUPa2p2IGF1ZGlvIGJpYmxl2AaLRA%3D%3D" target="noidung" >Best Book EVER</a>
+            <iframe name="noidung" width="100%" height="400%"> </iframe>
         </div>
     </div>
 </body>
